--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.2",
-    "mongoose": "^5.10.2",
+    "mongoose": "^5.10.7",
     "nodemon": "^2.0.4",
+    "npm": "^6.14.8",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0"
   }
